--- a/.irssi/config
+++ b/.irssi/config
@@ -51,6 +51,8 @@ channels = (
   { name = "#ubuntu-reviews"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-bugs"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-bugs-announce"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-beginners"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-beginners-team"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-es"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-es-offtopic"; chatnet = "fn"; autojoin = "Yes"; },
@@ -268,6 +270,8 @@ ignores = (
       "#ubuntu-desktop",
       "#ubuntu-classroom",
       "#ubuntu-classroom-chat",
+      "#ubuntu-beginners",
+      "#ubuntu-beginners-team",
       "#ubuntu-server",
       "##networking",
       "#ubuntu",
