--- a/.i3/config
+++ b/.i3/config
@@ -51,7 +51,16 @@ workspace 7 work
 workspace 8 work
 workspace 9 work
 workspace 10 work
-workspace 20 reading
+workspace 11 work
+workspace 12 work
+workspace 13 work
+workspace 14 work
+workspace 15 work
+workspace 16 work
+workspace 17 work
+workspace 18 work
+workspace 19 work
+workspace 20 work
 
 # Requires latest version (from git)
 # ---------------------------------->
@@ -73,7 +82,9 @@ ipc-socket ~/.i3/ipc.sock
 # ###################################
 
 # execute my startup programs
-#exec ~/.i3/startup
+# exec ~/.i3/startup
+exec /usr/bin/pcmanfm
+exec /usr/bin/x-terminal-emulator
 
 #exec xsetroot -solid white
 #exec xsetroot -cursor_name left_ptr
@@ -253,7 +264,7 @@ bindsym Control+Shift+a exec /usr/bin/x-terminal-emulator -e alsamixer
 
 # pcmanfm:
 #bindsym Control+Shift+h exec /usr/bin/pcmanfm 
-bindsym Control+Shift+h exec /usr/bin/gnome-commander
+bindsym Control+Shift+h exec nautilus
 
 # volume:
 bind Control+Shift+20 exec /usr/bin/amixer set Master 1-
@@ -317,6 +328,7 @@ assign "firefox"  1
 assign "buzz/irssi" 4
 assign "buzz/mutt" 5
 assign "pcmanfm" 6
+assign "nautilus" 6
 
 # ###################################
 # ############# COLORS ##############
