Added android & elementary VARS
        gitignore entries

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,24 @@
 .zathura
 .zenmap
 .ZoiperCommunicator
+.Bitch*
+.Skype
+.appletviewer
+.apvlvinfo
+.asadmin*
+.audacity*
+.bashdb*
+.byobu
+.eboard
+.fltk
+.freemind
+.galculator
+.gtkpod
+.isomaster
+.nbi
+.remmina
+.sticky-notes*
+.tetris*
+.vim/.VimballRecord
+.vim/.twitvim_token_file
+.whoami
