random changes: xtheme, lscolors

--- a/.irssi/config
+++ b/.irssi/config
@@ -28,11 +28,11 @@ servers = (
 );
 
 chatnets = {
-  fn = { type = "IRC"; autosendcmd = "wait 2000"; };
-  im = {
-    type = "IRC";
-    autosendcmd = "wait 1000; /msg &bitlbee identify just4fun";
-  };
+fn = { type = "IRC"; autosendcmd = "wait 2000"; };
+im = {
+type = "IRC";
+autosendcmd = "wait 1000; /msg &bitlbee identify just4fun";
+};
 };
 
 channels = (
@@ -54,7 +54,11 @@ channels = (
   { name = "#ubuntu-bugs"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-bugs-announce"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-beginners"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-beginners-team"; chatnet = "fn"; autojoin = "Yes"; },
+  { 
+    name = "#ubuntu-beginners-team";
+    chatnet = "fn";
+    autojoin = "Yes";
+  },
   #{ name = "#ubuntu"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-mx"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#fel-clan"; chatnet = "fn"; autojoin = "Yes"; },
@@ -63,7 +67,8 @@ channels = (
   { name = "#ubuntu-server"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#networking"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-es"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-es-offtopic"; chatnet = "fn"; autojoin = "Yes"; }
+  { name = "#ubuntu-es-offtopic"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-es-ops"; chatnet = "fn"; autojoin = "Yes"; }
 );
 
 ignores = (
@@ -83,6 +88,7 @@ ignores = (
       "#ubuntu-bugs",
       "#ubuntu-es",
       "#ubuntu-es-offtopic",
+      "#ubuntu-es-ops",
       "#ubuntu-mx",
       "#ubuntu-meeting",
       "#ubuntu-motu",
@@ -318,3 +324,4 @@ logs = { };
 #=============== [dcc] ================
 #======================================
 
+chatnets = { fn = { type = "IRC"; }; im = { type = "IRC"; }; };
