--- a/.irssi/config
+++ b/.irssi/config
@@ -46,17 +46,17 @@ channels = (
   #{ name = "#vim"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#metasploit"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-meeting"; chatnet = "fn"; autojoin = "Yes"; },
+  { name = "#ubuntu-locoteams"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-packaging"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-devel"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-motu"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-testing"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-bugs"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-bugs-announce"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-locoteams"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-beginners"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-beginners-team"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ubuntu-beginners"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ubuntu-beginners-team"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-desktop"; chatnet = "fn"; autojoin = "Yes"; },
-  { name = "#ubuntu-classroom"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ubuntu-classroom"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-server"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#networking"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-es"; chatnet = "fn"; autojoin = "Yes"; },
@@ -64,6 +64,11 @@ channels = (
   { name = "#ubuntu-es-ops"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "#ubuntu-br"; chatnet = "fn"; autojoin = "Yes"; },
   { name = "##ubuntu-br-offtopic"; chatnet = "fn"; autojoin = "Yes"; }
+  #{ name = "#ugj-df"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ugj-df-triaging"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ugj-df-testing"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ugj-df-traduccion"; chatnet = "fn"; autojoin = "Yes"; },
+  #{ name = "#ugj-df-doc"; chatnet = "fn"; autojoin = "Yes"; }
   #{ name = "#ubuntu"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#ubuntu-mx"; chatnet = "fn"; autojoin = "Yes"; },
   #{ name = "#fel-clan"; chatnet = "fn"; autojoin = "Yes"; },
