--- a/.pbuilderrc
+++ b/.pbuilderrc
@@ -48,7 +48,7 @@ DEBIAN_SUITES=($UNSTABLE_CODENAME $TESTING_CODENAME $STABLE_CODENAME
     "unstable" "testing" "stable")
 
 # List of Ubuntu suites. Update these when needed.
-UBUNTU_SUITES=("natty" "maverick" "lucid" "karmic" "jaunty" "hardy")
+UBUNTU_SUITES=("oneiric" "natty" "lucid")
 
 # Mirrors to use. Update these to your preferred mirror.
 DEBIAN_MIRROR="ftp.us.debian.org"
