--- a/.ssh/config
+++ b/.ssh/config
@@ -5,10 +5,12 @@
         #IdentityFile /home/chilicuil/.ssh/id_dsa.git
 
 Host buzz
-Port 1001
+	Port 1003
+	#LocalCommand echo buzz
+	#PermitLocalCommand yes
 
 Host mater
-Port 22
+    Port 22
 
 Host ndia
-Port 1001
+    Port 1001
