git: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#Last review            Fri 09 Sep 2011 01:28:57 PM CDT
 #Ignore everything
 /*
 #Don't ignore dotfiles
@@ -7,18 +8,25 @@
 .AbiSuite
 .adobe
 .alien-arena
+.appletviewer
 .aptitude
+.apvlvinfo
+.asadmin*
 .asoundrc*
 .aspell.*
-.assaultcube
-.assaultcube_v1.1
+.assaultcube*
+.audacity*
+.bashdb*
 .bash_eternal_history
 .bash_history
 .B.blend
 .BillardGL.conf.v7
+.Bitch*
 .bittorrent
+.blender
 .bluefish
 .boumlrc
+.byobu
 .bzr.log
 .cache
 .ccache*
@@ -39,10 +47,12 @@
 .dmrc
 .DownloadManager
 .dreampie
+.dropbox
 .dvdcss
 .e
 .e.*
 .easy_e17.conf*
+.eboard
 .ecomp
 .ecore
 .elinks
@@ -50,14 +60,19 @@
 .esd_auth
 .exaile
 .exchange
+.fehbg
 .fehrc
 .festival_history
 .fgfs
 .filezilla
 .flrec
+.fltk
 .font*
 .fontconfig
+.FontForge
+.freemind
 .frostwire*
+.galculator
 .gconf*
 .gconfd
 .gecavi
@@ -76,10 +91,12 @@
 .gntpositions
 #.gnu*
 #.gnupg
+.golly
 .grdc
 .gstreamer-0.10
 #.gtk*
 .gtk-bookmarks
+.gtkpod
 .httrack.ini
 .ICEauthority
 .icons
@@ -87,12 +104,14 @@
 .img*
 .irssi/away.log
 .irssi.logs
+.isomaster
 .jackdrc
 .jagex*
 .java
 .jigl
 .jmol
 .kde*
+.keysnail.tb.js
 .kicad
 .last_backup
 .launchpadlib
@@ -108,6 +127,7 @@
 .matplotlib
 .mc
 .mcop*
+.mixxx
 .mono
 .mozilla
 .mozilla.back*
@@ -119,6 +139,7 @@
 .mutt/certificates
 .mysql*
 .nautilus
+.nbi
 .ncmpcpp
 .neocon
 .netx*
@@ -132,6 +153,7 @@
 .opendict
 .openoffice.org
 .packages.list
+.pan2
 .pass
 .pgadmin3
 .pgpass
@@ -149,20 +171,23 @@
 .quakelive
 .rage
 .recently-used*
-.recently-used.xbel
 .rex
 .sage
+.scid
 .screen*
 .selected_editor
 .service_proxy_dir
 .sig
 .silc
+.sjeng
 .sjphone
 .skel
+.Skype
 .softmaker
 .ssh/authorized_keys
 .ssh/id*
 .ssh/known_hosts
+.sticky-notes*
 .subversion
 .sudo_as_admin_successful
 .sw*
@@ -171,6 +196,7 @@
 .tdrc
 .teamviewer
 .terminfo
+.tetris*
 .texmf-var
 .themes
 .thumbnails
@@ -184,11 +210,14 @@
 .vagalume
 .viminf*
 .vimperator/info
+.vim/.twitvim_token_file
+.vim/.VimballRecord
 .virtaal/tm.db
 .VirtualBox
 .vlc
 .w3m
 .wesnoth*
+.whoami
 .wine
 .wireshark
 .wmcliphis*
@@ -199,6 +228,7 @@
 .wm_style
 .wxglade
 .Xauthority
+.xbmc
 .xine
 .xmdd*
 .xmind
@@ -213,27 +243,3 @@
 .zathura
 .zenmap
 .ZoiperCommunicator
-.Bitch*
-.Skype
-.appletviewer
-.apvlvinfo
-.asadmin*
-.audacity*
-.bashdb*
-.byobu
-.eboard
-.fltk
-.freemind
-.galculator
-.gtkpod
-.isomaster
-.nbi
-.sticky-notes*
-.tetris*
-.vim/.VimballRecord
-.vim/.twitvim_token_file
-.whoami
-.dropbox
-.blender
-.golly
-.mixxx
